--- a/add_domain_packages.yml
+++ b/add_domain_packages.yml
@@ -18,5 +18,5 @@
         - samba-common-bin
         - oddjob
         - oddjob-mkhomedir
-        - name=packagekit
+        - packagekit
       state: present
