--- a/change_hostname.yml
+++ b/change_hostname.yml
@@ -1,8 +1,9 @@
----
+--- 
+
 - hosts: test
-  become: true
-  gather_facts: false 
+
   tasks:
-  - name: change hostname to new
-    hostname:
-      name: "lab-w04"
+
+  - name: Set hostname
+
+    shell: hostnamectl set-hostname lab-w04  
